se realizan cambios en el portafolio

--- a/index.html
+++ b/index.html
@@ -377,8 +377,7 @@
                 class="text-decoration-none"
                 target="_blank"
               >
-                <h3 class="text-dark fs-5 mt-2 mb-0">Portfolio</h3>
-                <p class="text-muted mb-4">View Code</p>
+                <h3 class="text-dark fs-5 mt-2 mb-0">Bags & Style</h3>
               </a>
             </a>
           </div>
@@ -442,7 +441,7 @@
           </div>
           <form
             action="https://formsubmit.co/j.manuelneiraferrada@gmail.com"
-            method="POST"
+            method="POST" class="col-md-7"
           >
             <div class="col-md-7">
               <div class="contact-form">
