--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
             <div class="row text-center text-uppercase my-3">
               <div class="col-sm-4">
                 <div class="fact-item">
-                  <h4 class="fs-1 fw-bold">15</h4>
+                  <h4 class="fs-1 fw-bold">26</h4>
                   <p class="text-muted">Projectos Completados</p>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="fact-item">
-                  <h4 class="fs-1 fw-bold">14</h4>
+                  <h4 class="fs-1 fw-bold">24</h4>
                   <p class="text-muted">Clientes Felices</p>
                 </div>
               </div>
               <div class="col-sm-4">
                 <div class="fact-item">
-                  <h4 class="fs-1 fw-bold">12</h4>
+                  <h4 class="fs-1 fw-bold">24</h4>
                   <p class="text-muted">Revisiones Positivas</p>
                 </div>
               </div>
@@ -230,6 +230,34 @@
                 ></div>
               </div>
             </div>
+            <div class="skill-item mb-4">
+              <h3 class="fs-6">React.js</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-label="Example 20px high"
+                  style="width: 50%"
+                  aria-valuenow="25"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
+            <div class="skill-item mb-4">
+              <h3 class="fs-6">React Native</h3>
+              <div class="progress">
+                <div
+                  class="progress-bar"
+                  role="progressbar"
+                  aria-label="Example 20px high"
+                  style="width: 45%"
+                  aria-valuenow="25"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                ></div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -249,59 +277,30 @@
         <div class="row mx-1">
           <div class="col-md-6 col-lg-4">
             <a
-              href="./assets/juan manuel neira ferrada.pdf"
+              href="https://jnsports.cl/"
               class="text-decoration-none"
               target="_blank"
             >
               <div class="portfolio-item">
                 <img
-                  src="./assets/img/curriculum jm final.png"
+                  src="assets/img//jnsports.png"
                   class="w-100 img-thumbnail"
                   alt="portfolio-item"
                 />
               </div>
-            </a>
-            <a
-              href="./assets/juan manuel neira ferrada.pdf"
-              class="text-decoration-none"
-              target="_blank"
-            >
-              <h3 class="text-dark fs-5 mt-2 mb-0">Perfiles Profesionales</h3>
+                <h3 class="text-dark fs-5 mt-2 mb-0">JNSports.cl</h3>
+              </a>
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
             <a
-              href="https://juan2485.github.io/turismo/"
+              href="https://tiendasfutbol.cl/"
               class="text-decoration-none"
               target="_blank"
             >
               <div class="portfolio-item">
                 <img
-                  src="assets/img/Gobierno Regional de la Araucanía.png"
-                  class="w-100 img-thumbnail"
-                  alt="portfolio-item"
-                />
-              </div>
-            </a>
-            <a
-              href="https://juan2485.github.io/turismo/"
-              class="text-decoration-none"
-              target="_blank"
-            >
-              <h3 class="text-dark fs-5 mt-2 mb-0">
-                Gobierno Regional de la Araucanía
-              </h3>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a
-              href="https://juan2485.github.io/cuppon/"
-              class="text-decoration-none"
-              target="_blank"
-            >
-              <div class="portfolio-item">
-                <img
-                  src="assets/img/d4.png"
+                  src="assets/img/fergus.png"
                   class="w-100 img-thumbnail"
                   alt="portfolio-item"
                 />
@@ -311,7 +310,7 @@
                 class="text-decoration-none"
                 target="_blank"
               >
-                <h3 class="text-dark fs-5 mt-2 mb-0">Cuppon.cl</h3>
+                <h3 class="text-dark fs-5 mt-2 mb-0">Fergus.cl</h3>
               </a>
             </a>
           </div>
@@ -335,6 +334,94 @@
               target="_blank"
             >
               <h3 class="text-dark fs-5 mt-2 mb-0">Multimind</h3>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="https://www.autocustomgt.com/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="assets/img/autocustom.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+              <a
+                href="https://juan2485.github.io/cuppon/"
+                class="text-decoration-none"
+                target="_blank"
+              >
+                <h3 class="text-dark fs-5 mt-2 mb-0">Autocustom</h3>
+              </a>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="https://rdrental.com.pe/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="assets/img/rd rental.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+              <a
+                href="https://rdrental.com.pe/"
+                class="text-decoration-none"
+                target="_blank"
+              >
+                <h3 class="text-dark fs-5 mt-2 mb-0">RD Rental</h3>
+              </a>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="https://juegosmultiverso.com.ar/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="assets/img/juegosmultiverso.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+              <a
+                href="https://juegosmultiverso.com.ar/"
+                class="text-decoration-none"
+                target="_blank"
+              >
+                <h3 class="text-dark fs-5 mt-2 mb-0">JuegosMultiverso</h3>
+              </a>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="https://juan2485.github.io/cuppon/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="assets/img/d4.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+              <a
+                href="https://juan2485.github.io/cuppon/"
+                class="text-decoration-none"
+                target="_blank"
+              >
+                <h3 class="text-dark fs-5 mt-2 mb-0">Cuppon.cl</h3>
+              </a>
             </a>
           </div>
           <div class="col-md-6 col-lg-4">
@@ -381,6 +468,52 @@
               </a>
             </a>
           </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="./assets/juan manuel neira ferrada.pdf"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="./assets/img/curriculum jm final.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+            </a>
+            <a
+              href="./assets/juan manuel neira ferrada.pdf"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <h3 class="text-dark fs-5 mt-2 mb-0">Perfiles Profesionales</h3>
+            </a>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="https://juan2485.github.io/turismo/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <div class="portfolio-item">
+                <img
+                  src="assets/img/Gobierno Regional de la Araucanía.png"
+                  class="w-100 img-thumbnail"
+                  alt="portfolio-item"
+                />
+              </div>
+            </a>
+            <a
+              href="https://juan2485.github.io/turismo/"
+              class="text-decoration-none"
+              target="_blank"
+            >
+              <h3 class="text-dark fs-5 mt-2 mb-0">
+                Gobierno Regional de la Araucanía
+              </h3>
+            </a>
+          </div>
         </div>
       </div>
     </section>
@@ -421,7 +554,35 @@
                 <a
                   href="tel:+56 9 82708122"
                   class="text-decoration-none text-white"
-                  ><p>+56 9 46827184</p></a
+                  ><p>+56 9 45177679</p></a
+                >
+              </div>
+            </div>
+            <div class="contact-item d-flex mb-3">
+              <div class="icon fs-4">
+                <i class="fab fa-linkedin-in"></i>
+              </div>
+              <div class="text ms-3">
+                <h3 class="fs-5 mb-0">Linkedin</h3>
+                <a
+                  href="tel:+56 9 82708122"
+                  class="text-decoration-none text-white"
+                  ><p>
+                    https://www.linkedin.com/in/juan-manuel-neira-ferrada-1a3a2118b/
+                  </p></a
+                >
+              </div>
+            </div>
+            <div class="contact-item d-flex mb-3">
+              <div class="icon fs-4">
+                <i class="fab fa-whatsapp"></i>
+              </div>
+              <div class="text ms-3">
+                <h3 class="fs-5 mb-0">Whatsapp</h3>
+                <a
+                  href="tel:+56 9 82708122"
+                  class="text-decoration-none text-white"
+                  ><p>https://wa.me/56982708122</p></a
                 >
               </div>
             </div>
